--- a/webroot/index.html
+++ b/webroot/index.html
@@ -127,7 +127,7 @@
 					<a class="ltc-medium-electric-blue" href="files/Abstract-template.doc"><u>Abstract Template</u></a><br>
 				</p>
 				<p>
-					All abstracts are going to be selected according to double blind reviews. The abstract should be submitted as a separate file (.doc or .docx format) in English indicating the aim, significance, methodology and results of the research and it must be between 250-350 words. Within one week of receiving your proposal, we will send you an email notification of its acceptance or rejection. Please send your abstracts to the following e-mail: <a href="mailto:kulturasartefakts@du.lv">kulturasartefakts@du.lv</a>.
+					All abstracts are going to be selected according to double blind reviews. The abstract should be submitted as a separate file (.doc or .docx format) in English indicating the aim, significance, methodology and results of the research and it must be between 250-350 words. Within one week of receiving your proposal, we will send you an email notification of its acceptance or rejection. Please send your abstracts to the following e-mail: <a href="mailto:kulturasartefakts@du.lv">kulturasartefakts@gmail.com</a>.
 				</p>
 			</div>
 		</div>
