--- a/webroot/index.html
+++ b/webroot/index.html
@@ -37,7 +37,7 @@
 			<h1>
 				International Academic Conference<br/>
 				HUMAN: LANGUAGE, SOCIETY, CULTURE<br/>
-				June 29, 2020
+				November 27, 2020
 			</h3>
 		</div>
 	</div>
@@ -121,7 +121,7 @@
 			</div>
 			<div class="col">
 				<p>
-					June 26, 2020
+					October 27, 2020
 				</p>
 				<p>
 					<a class="ltc-medium-electric-blue" href="files/Abstract-template.doc"><u>Abstract Template</u></a><br>
@@ -144,10 +144,13 @@
 					Registration Deadline
 				</h3>
 				<p>
-					June 26, 2020
+					October 27, 2020
 				</p>
 				<p>
-					Registration Fee for Virtual Presentation: EUR&nbsp;70.00
+					Registration fee for Virtual Presentation: EUR&nbsp;70.00
+				</p>
+				<p>
+					Registration fee for Listener: EUR 30.00
 				</p>
 				<p>Invoices will be sent via email as a PDF attachment. In order to receive an invoice on behalf of a company or organisation you must state this in advance. If the bank transfer is ordered by a natural person, it is not possible an invoice to a company or organisation to be issued afterwards. All bank charges and commissions are paid by the participants.</p>
 			</div>
@@ -165,7 +168,7 @@
 					Full papers Submission Deadline
 				</h3>
 				<p>
-					July 29, 2020
+					January 27, 2021
 				</p>
 				<p>Accepted papers will be published in JOURNAL OF COMPARATIVE STUDIES:</p>
 				<p>“Journal of Comparative Studies” is a peer-reviewed multidisciplinary journal that promotes a broad conception of cultural studies in the field of humanities and social sciences. The main purpose of the journal is to publish original multidisciplinary papers dealing with issues of regional, national, international and global significance applying comparative methodology on all aspects of culture, including comparative cultural studies, comparative literature, language and contrastive linguistics, identity, cultural citizenship, migration, post-colonial criticism, consumer cultures. “Journal of Comparative Studies” has entered into an electronic licensing relationship with EBSCO Publishing and IC Journal Master List.
