--- a/webroot/index.html
+++ b/webroot/index.html
@@ -217,7 +217,7 @@
 					Contact Us<br>
 				</h3>
 				<p>
-					Please direct your questions to Conference Organizing Committee: <a href="mailto:kpc@du.lv">kpc@du.lv</a>, <a href="mailto:kulturasartfekts@gmail.com">kulturasartfekts@gmail.com</a>.
+					Please direct your questions to Conference Organizing Committee: <a href="mailto:kpc@du.lv">kpc@du.lv</a>, <a href="mailto:kulturasartefakts@gmail.com">kulturasartefakts@gmail.com</a>.
 				</p>
 			</div>
 		</div>
