--- a/webroot/index.html
+++ b/webroot/index.html
@@ -121,7 +121,7 @@
 			</div>
 			<div class="col">
 				<p>
-					June 10, 2021
+					November 12, 2021.
 				</p>
 				<p>
 					<a class="ltc-medium-electric-blue" href="files/Abstract-template.doc"><u>Abstract Template</u></a><br>
@@ -144,7 +144,7 @@
 					Registration Deadline
 				</h3>
 				<p>
-					June 15, 2021
+					November 15, 2021.
 				</p>
 				<p>
 					Registration fee for Virtual Presentation: EUR&nbsp;70.00
@@ -168,7 +168,7 @@
 					Full papers Submission Deadline
 				</h3>
 				<p>
-					July 21, 2021
+					January 22, 2022.
 				</p>
 				<p>Accepted papers will be published in JOURNAL OF COMPARATIVE STUDIES:</p>
 				<p>“Journal of Comparative Studies” is a peer-reviewed multidisciplinary journal that promotes a broad conception of cultural studies in the field of humanities and social sciences. The main purpose of the journal is to publish original multidisciplinary papers dealing with issues of regional, national, international and global significance applying comparative methodology on all aspects of culture, including comparative cultural studies, comparative literature, language and contrastive linguistics, identity, cultural citizenship, migration, post-colonial criticism, consumer cultures. “Journal of Comparative Studies” has entered into an electronic licensing relationship with EBSCO Publishing and IC Journal Master List.
