--- a/webroot/index.html
+++ b/webroot/index.html
@@ -28,7 +28,7 @@
 		<div id="up-title" class="d-none1 d-sm-block1">
 			International Academic Conference<br/>
 				HUMAN: LANGUAGE, SOCIETY, CULTURE<br/>
-				November 21, 2022
+				June 19, 2023
 		</div>
 		<img id="bg-img" src="img/bg.jpg"/>
 		<div id="bg-logo" class="d-none1 d-sm-block1">
@@ -124,7 +124,7 @@
 			</div>
 			<div class="col">
 				<p>
-					November 11, 2022.
+					June 8, 2023.
 				</p>
 				<p>
 					<a class="ltc-medium-electric-blue" href="files/Abstract-template.doc"><u>Abstract Template</u></a><br>
@@ -147,7 +147,7 @@
 					Registration Deadline
 				</h3>
 				<p>
-					November 14, 2022.
+					June 12, 2023.
 				</p>
 				<p>
 					Registration fee for Virtual Presentation: EUR&nbsp;70.00
@@ -171,12 +171,12 @@
 					Full papers Submission Deadline
 				</h3>
 				<p>
-					December 30, 2022.
+					July 30, 2023.
 				</p>
 				<p>Accepted papers will be published in JOURNAL OF COMPARATIVE STUDIES:</p>
 				<p>“Journal of Comparative Studies” is a peer-reviewed multidisciplinary journal that promotes a broad conception of cultural studies in the field of humanities and social sciences. The main purpose of the journal is to publish original multidisciplinary papers dealing with issues of regional, national, international and global significance applying comparative methodology on all aspects of culture, including comparative cultural studies, comparative literature, language and contrastive linguistics, identity, cultural citizenship, migration, post-colonial criticism, consumer cultures. “Journal of Comparative Studies” has entered into an electronic licensing relationship with EBSCO Publishing and IC Journal Master List.
 					Regarding the journal publication, there will be an additional review process.
-					More about the journal: <a href="http://humanitiessocial.lv/strukturvienibas/kulturas-petijumu-centrs/zinatniskie-izdevumi/zinatniskais-zurnals-komparativistikas-almanahs/">http://humanitiessocial.lv/strukturvienibas/kulturas-petijumu-centrs/zinatniskie-izdevumi/zinatniskais-zurnals-komparativistikas-almanahs/</a></p>
+					More about the journal: <a href="https://du.lv/en/journal-of-comparative-studies/">https://du.lv/en/journal-of-comparative-studies/</a></p>
 			</div>
 		</div>
 	</div>
