Remove Alīna Romanovska from Conference Organizing Committee

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -204,7 +204,7 @@
 					Conference Organizing Committee<br>
 				</h3>
 				<p>
-					Dr. philol. Ilze Kačāne - Chair<br>Dr. philol. Žans Badins<br>Dr. philol. Oksana Kovzele<br>Dr. philol. Alīna Romanovska<br>
+					Dr. philol. Ilze Kačāne - Chair<br>Dr. philol. Žans Badins<br>Dr. philol. Oksana Kovzele<br>
 				</p>
 			</div>
 			<div class="col-12">
